# RangeStore

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  RangeStore.hpp  main.cpp
src/test/: CMakeLists.txt  tests.cpp
